Made 12 months row in grid adjust to current date

--- a/popup.html
+++ b/popup.html
@@ -24,19 +24,7 @@
   </div>
   <div class="visuals">
     <div class="grid">
-      <ul class="months">
-        <li>Jan</li>
-        <li>Feb</li>
-        <li>Mar</li>
-        <li>Apr</li>
-        <li>May</li>
-        <li>Jun</li>
-        <li>Jul</li>
-        <li>Aug</li>
-        <li>Sep</li>
-        <li>Oct</li>
-        <li>Nov</li>
-        <li>Dec</li>
+      <ul class="months" id="months">
       </ul>
       <ul class="days">
         <li>Sun</li>
