Months shown is now variable and grid adjusts currectly to this

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,9 @@
 <body>
   <div class="header">
     <h1 class="logo">
-      <img src="images/stack-overflow.png" alt="Stack Overflow" class="logo-icon">How bad is your code?
+      <a href="https://stackoverflow.com/" , target="_blank"><img src="images/stack-overflow.png" alt="Stack Overflow"
+          class="logo-icon"></a>How
+      bad is your code?
     </h1>
     <div class="header-content">
       <p class="details"><span class="details-description">First Active </span><span id="first-active"></span></p>
