--- a/popup.html
+++ b/popup.html
@@ -17,30 +17,50 @@
           class="logo-icon"></a>How
       bad is your code?
     </h1>
-    <div class="header-content">
+    <div class="header-bottom">
       <p class="details"><span class="details-description">First Active </span><span id="first-active"></span></p>
       <p class="details"><span class="details-description">Last Active </span><span id="last-active">today</span></p>
       <p class="details"><span class="details-description">Total Visits </span><span id="total-visits">000</span>
       </p>
     </div>
   </div>
-  <div class="visuals">
-    <div class="grid">
-      <ul class="months" id="months">
-      </ul>
-      <ul class="days">
-        <li>Sun</li>
-        <li>Mon</li>
-        <li>Tue</li>
-        <li>Wed</li>
-        <li>Thu</li>
-        <li>Fri</li>
-        <li>Sat</li>
-      </ul>
-      <ul class="squares" id="squares">
-        <!-- Squares added with popup.js -->
-      </ul>
+  <div class="content">
+    <p>Currently tracking the number of visits to <code>test</code>. with <code>git push origin test</code> to a shared
+      repository.
+      I can see the branch with <code>git branch -r</code>.</p>
+    <p>Latest visited links:</p>
+    <ul class="links">
+      <li>
+        <a
+          href="/">https://stackoverflow.com/questions/65948056/how-to-insert-a-new-symbol-into-the-instance-of-class-bindatarecord-in-ruby</a>
+      </li>
+      <li>
+        <a href="/">https://stackoverflow.com/questions/65947090/inverted-triangle</a>
+      </li>
+      <li><a href="/">https://stackoverflow.com/questions/65949268/double-time-specification-in-file-in-laravel-api</a>
+      </li>
+    </ul>
+    <div class="content-bottom">
+      <p class="details details-description">Share</p>
+      <p class="details details-description">Edit</p>
+      <p class="details details-description">Follow</p>
     </div>
+  </div>
+  <div class="grid">
+    <ul class="months" id="months">
+    </ul>
+    <ul class="days">
+      <li>Sun</li>
+      <li>Mon</li>
+      <li>Tue</li>
+      <li>Wed</li>
+      <li>Thu</li>
+      <li>Fri</li>
+      <li>Sat</li>
+    </ul>
+    <ul class="squares" id="squares">
+      <!-- Squares added with popup.js -->
+    </ul>
   </div>
   <!-- <div class="icons">
     <div class="icon-div">
