Refactored with SASS/SCSS and changed folder structure

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -11,7 +11,9 @@
   <p>Count the number of visits to:</p>
   <textarea id="sites" rows="4" cols="50"></textarea>
   <br><br>
-  <label><input type="checkbox" id="daily"> Count only one visit a day</label>
+  <label>
+    Stack Overflow account id: <input type="text" id="accountId">
+  </label>
   <p id="status"></p>
   <button id="save">Save</button>
   <button id="reset">Reset to Default</button>
