Added jQuery and refactored existing js to jQuery

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -83,7 +83,8 @@
     <ul class="squares" id="squares"></ul>
   </div>
 
-  <script type="module" src="popup.js"></script>
+  <script src="/js/jquery-3.5.1.js"></script>
+  <script src="popup.js"></script>
 </body>
 
 </html>
