Finished user account info functionality and options

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -44,26 +44,7 @@
         <li class="details details-description">Follow</li>
       </ul>
 
-      <div class="content-user-bottom">
-        <p class="user-action-time">asked Jun 27 '12 at 13:51</p>
-        <img class="user-profile-image"
-          src="https://www.gravatar.com/avatar/d8e51937042f6344943fa03f47a31a50?s=328&d=identicon&r=PG&f=1">
-        <a class="user-display-name">GManNickG</a>
-        <p class="user-flair">
-          <span class="reputation-score">452k</span>
-          <span class="badge">
-            <span class="badge-icon gold-badge-icon"></span>
-            <span class="badge-count">48</span>
-          </span>
-          <span class="badge">
-            <span class="badge-icon silver-badge-icon"></span>
-            <span class="badge-count">457</span>
-          </span>
-          <span class="badge">
-            <span class="badge-icon bronze-badge-icon"></span>
-            <span class="badge-count">532</span>
-          </span>
-        </p>
+      <div class="content-user-bottom" id="content-user-bottom">
       </div>
     </div>
   </div>
