Fixed visual bug where user account background would show even without user id specified

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -42,7 +42,7 @@
         <li class="details details-description">Follow</li>
       </ul>
 
-      <div class="content-user-bottom" id="content-user-bottom">
+      <div id="content-user-bottom">
       </div>
     </div>
   </div>
