--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -49,15 +49,12 @@
 
   <!-- Grid -->
   <div class="grid">
+    <div class="grid-loading-container" id="grid-loading-container">
+      <div class="grid-loading">loading...</div>
+    </div>
+
     <ul class="months" id="months"></ul>
-    <ul class="days">
-      <li>Sun</li>
-      <li>Mon</li>
-      <li>Tue</li>
-      <li>Wed</li>
-      <li>Thu</li>
-      <li>Fri</li>
-      <li>Sat</li>
+    <ul class="days" id="days">
     </ul>
     <ul class="squares" id="squares"></ul>
   </div>
